--- a/react-ui/public/index.html
+++ b/react-ui/public/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-
+<link href="https://fonts.googleapis.com/css?family=Acme|Exo+2|Montserrat+Alternates" rel="stylesheet">
     
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
