--- a/react-ui/public/index.html
+++ b/react-ui/public/index.html
@@ -6,6 +6,17 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 <link href="https://fonts.googleapis.com/css?family=Acme|Exo+2|Montserrat+Alternates" rel="stylesheet">
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-96593641-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
     
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
